<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MyActivity">

    <item android:id="@+id/action_send"
        android:icon="@drawable/ic_action_send"
        android:title="@string/action_send"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_file"
        android:icon="@drawable/ic_action_file"
        android:title="@string/action_file"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_draw"
        android:icon="@drawable/ic_action_draw"
        android:title="@string/action_draw"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_settings"
        android:icon="@drawable/ic_action_send"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
<!--
    <item android:id="@+id/action_search"
        android:icon="@drawable/ic_action_send"
        android:title="@string/action_search"
        android:showAsAction="ifRoom" />
    -->